alteracões - retirada de botão que mudava o dark and light

--- a/style.css
+++ b/style.css
@@ -14,16 +14,6 @@
     --switch-bg-url:url(./assets/assets/moon-stars.svg);
 }
 
-.light {
-    --text-color: black;
-    --bg-url: url(./assets/assets/bg-mobile-light.jpg);
-    --stroke-color: rgba(0, 0,0, 0.5);
-    --surface-color: rgba(0, 0, 0, 0.05);
-    --surface-color-hover: rgba(0, 0, 0, 0.02);
-    --highlight-color:rgba(0, 0, 0, 0.1);
-    --switch-bg-url:url(./assets/assets/sun.svg);
-}
-
 body {
     background: var(--bg-url) no-repeat top center/cover;
     height: 100vh;
@@ -47,7 +37,7 @@ body * {
     }
 
 #profile img {
-    width: 112px;
+    width: 250px;
     }
 
 
@@ -65,41 +55,6 @@ body * {
     margin: 4px auto;
     }
 
-#switch button {
-    width: 32px;
-    height: 32px;
-    background: white var(--switch-bg-url) no-repeat center;
-    border: 0;
-    border-radius: 50%;
-    
-    position: absolute;
-    top:50%;
-    left: 0;
-    z-index: 1;
-    transform: translateY(-50%);
-    
-    animation: slide-back 0.2s;
-    }
-
-.light #switch button {
-    animation: slide-in 0.2s forwards;
-    }
-
-#switch button:hover {
-    outline: 8px solid var(--highlight-color);
-    }
-    
-#switch span {
-    display: block;
-    width: 64px;
-    height: 24px;
-    background: var(--surface-color);
-    border: 1px solid var(--stroke-color);
-    backdrop-filter: blur(4px);
-    -webkit-backdrop-filter: blur(4px);
-    border-radius: 9999px;
-             /* stroke-color-dark-mode*/
-    }
 
     /* links*/
 ul {
@@ -174,9 +129,9 @@ ul {
             --bg-ur: url(./assets/assets/bg-desktop.jpg);
         }
 
-        .light{
-            --bg-url: url(./assets/assets/bg-desktop-light.jpg);
-        }
+       /* .light{
+           --bg-url: url(./assets/assets/bg-desktop-light.jpg);
+        } */  
     }
 /*animation*/
     @keyframes slide-in {
